--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -26,9 +26,9 @@
         android:id="@+id/rvPopularityMovie"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginBottom="50dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavViewAnonim"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvPopularity" />
@@ -52,9 +52,9 @@
         android:id="@+id/rvTopRatedMovie"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginBottom="50dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavViewAnonim"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvPopularity" />
@@ -69,6 +69,15 @@
         app:layout_constraintStart_toEndOf="@+id/tvPopularity"
         app:layout_constraintTop_toTopOf="@+id/tvPopularity"
         tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavViewAnonim"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        tools:ignore="MissingConstraints"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
