--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -36,6 +36,44 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvPopularity" />
 
+    <TextView
+        android:id="@+id/tvTopRated"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:padding="5dp"
+        android:text="TopRated"
+        android:textColor="@color/black"
+        android:textSize="22sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/switchMoviews"
+        app:layout_constraintTop_toTopOf="@+id/switchMoviews"
+        app:layout_constraintBottom_toBottomOf="@+id/switchMoviews"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvTopRatedMovie"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:layout_margin="10dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavViewAnonim"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvPopularity" />
+
+    <Switch
+        android:id="@+id/switchMoviews"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
+        android:minWidth="48dp"
+        android:minHeight="48dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tvPopularity"
+        app:layout_constraintStart_toEndOf="@+id/tvPopularity"
+        app:layout_constraintTop_toTopOf="@+id/tvPopularity"
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
+
 
 
 
