--- a/app/src/main/res/layout/fragment_about_author.xml
+++ b/app/src/main/res/layout/fragment_about_author.xml
@@ -117,7 +117,7 @@
                 android:background="@drawable/background">
 
                 <ImageView
-                    android:id="@+id/imageView4"
+                    android:id="@+id/iv4"
                     android:layout_width="40dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -134,12 +134,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
-                    android:text="Java Kotlin"
+                    android:text="@string/java_kotlin"
+                    android:textColor="@color/black"
                     android:textSize="14sp"
                     android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView4"
-                    app:layout_constraintStart_toEndOf="@+id/imageView4"
-                    app:layout_constraintTop_toTopOf="@+id/imageView4" />
+                    app:layout_constraintBottom_toBottomOf="@+id/iv4"
+                    app:layout_constraintStart_toEndOf="@+id/iv4"
+                    app:layout_constraintTop_toTopOf="@+id/iv4"
+                    tools:ignore="DuplicateIds" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -151,7 +153,7 @@
                 android:background="@drawable/background">
 
                 <ImageView
-                    android:id="@+id/imageView4"
+                    android:id="@+id/iv4"
                     android:layout_width="40dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -168,11 +170,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:text="Coroutines"
+                    android:textColor="@color/black"
                     android:textSize="14sp"
                     android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView4"
-                    app:layout_constraintStart_toEndOf="@+id/imageView4"
-                    app:layout_constraintTop_toTopOf="@+id/imageView4" />
+                    app:layout_constraintBottom_toBottomOf="@+id/iv4"
+                    app:layout_constraintStart_toEndOf="@+id/iv4"
+                    app:layout_constraintTop_toTopOf="@+id/iv4" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
 
@@ -190,7 +193,7 @@
                 android:background="@drawable/background">
 
                 <ImageView
-                    android:id="@+id/imageView4"
+                    android:id="@+id/iv4"
                     android:layout_width="40dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -207,11 +210,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:text="Unit-тесты"
+                    android:textColor="@color/black"
                     android:textSize="14sp"
                     android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView4"
-                    app:layout_constraintStart_toEndOf="@+id/imageView4"
-                    app:layout_constraintTop_toTopOf="@+id/imageView4" />
+                    app:layout_constraintBottom_toBottomOf="@+id/iv4"
+                    app:layout_constraintStart_toEndOf="@+id/iv4"
+                    app:layout_constraintTop_toTopOf="@+id/iv4" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -222,7 +226,7 @@
                 android:background="@drawable/background">
 
                 <ImageView
-                    android:id="@+id/imageView4"
+                    android:id="@+id/iv4"
                     android:layout_width="40dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -239,11 +243,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:text="Room"
+                    android:textColor="@color/black"
                     android:textSize="14sp"
                     android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView4"
-                    app:layout_constraintStart_toEndOf="@+id/imageView4"
-                    app:layout_constraintTop_toTopOf="@+id/imageView4" />
+                    app:layout_constraintBottom_toBottomOf="@+id/iv4"
+                    app:layout_constraintStart_toEndOf="@+id/iv4"
+                    app:layout_constraintTop_toTopOf="@+id/iv4" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
 
@@ -261,7 +266,7 @@
                 android:background="@drawable/background">
 
                 <ImageView
-                    android:id="@+id/imageView4"
+                    android:id="@+id/iv4"
                     android:layout_width="40dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -278,11 +283,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:text="REST, Retrofit"
+                    android:textColor="@color/black"
                     android:textSize="14sp"
                     android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView4"
-                    app:layout_constraintStart_toEndOf="@+id/imageView4"
-                    app:layout_constraintTop_toTopOf="@+id/imageView4" />
+                    app:layout_constraintBottom_toBottomOf="@+id/iv4"
+                    app:layout_constraintStart_toEndOf="@+id/iv4"
+                    app:layout_constraintTop_toTopOf="@+id/iv4" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -293,7 +299,7 @@
                 android:background="@drawable/background">
 
                 <ImageView
-                    android:id="@+id/imageView4"
+                    android:id="@+id/iv4"
                     android:layout_width="40dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -311,11 +317,12 @@
                     android:layout_marginStart="10dp"
                     android:text="Broadcast receivers
                      Services"
+                    android:textColor="@color/black"
                     android:textSize="11sp"
                     android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView4"
-                    app:layout_constraintStart_toEndOf="@+id/imageView4"
-                    app:layout_constraintTop_toTopOf="@+id/imageView4" />
+                    app:layout_constraintBottom_toBottomOf="@+id/iv4"
+                    app:layout_constraintStart_toEndOf="@+id/iv4"
+                    app:layout_constraintTop_toTopOf="@+id/iv4" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
 
@@ -333,7 +340,7 @@
                 android:background="@drawable/background">
 
                 <ImageView
-                    android:id="@+id/imageView4"
+                    android:id="@+id/iv4"
                     android:layout_width="40dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -350,11 +357,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:text="MVVM, MVP"
+                    android:textColor="@color/black"
                     android:textSize="12sp"
                     android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView4"
-                    app:layout_constraintStart_toEndOf="@+id/imageView4"
-                    app:layout_constraintTop_toTopOf="@+id/imageView4" />
+                    app:layout_constraintBottom_toBottomOf="@+id/iv4"
+                    app:layout_constraintStart_toEndOf="@+id/iv4"
+                    app:layout_constraintTop_toTopOf="@+id/iv4" />
             </androidx.constraintlayout.widget.ConstraintLayout>
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
@@ -364,7 +372,7 @@
                 android:background="@drawable/background">
 
                 <ImageView
-                    android:id="@+id/imageView4"
+                    android:id="@+id/iv4"
                     android:layout_width="40dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -381,11 +389,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:text="Git, GitHub"
+                    android:textColor="@color/black"
                     android:textSize="14sp"
                     android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView4"
-                    app:layout_constraintStart_toEndOf="@+id/imageView4"
-                    app:layout_constraintTop_toTopOf="@+id/imageView4" />
+                    app:layout_constraintBottom_toBottomOf="@+id/iv4"
+                    app:layout_constraintStart_toEndOf="@+id/iv4"
+                    app:layout_constraintTop_toTopOf="@+id/iv4" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
@@ -403,7 +412,7 @@
                 android:background="@drawable/background">
 
                 <ImageView
-                    android:id="@+id/imageView4"
+                    android:id="@+id/iv4"
                     android:layout_width="40dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -420,11 +429,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:text="Animation"
+                    android:textColor="@color/black"
                     android:textSize="12sp"
                     android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView4"
-                    app:layout_constraintStart_toEndOf="@+id/imageView4"
-                    app:layout_constraintTop_toTopOf="@+id/imageView4" />
+                    app:layout_constraintBottom_toBottomOf="@+id/iv4"
+                    app:layout_constraintStart_toEndOf="@+id/iv4"
+                    app:layout_constraintTop_toTopOf="@+id/iv4" />
             </androidx.constraintlayout.widget.ConstraintLayout>
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
@@ -434,7 +444,7 @@
                 android:background="@drawable/background">
 
                 <ImageView
-                    android:id="@+id/imageView4"
+                    android:id="@+id/iv4"
                     android:layout_width="40dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -450,12 +460,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
-                    android:text="RxJAava,Dagger"
+                    android:text="RxJava,Dagger"
+                    android:textColor="@color/black"
                     android:textSize="12sp"
                     android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView4"
-                    app:layout_constraintStart_toEndOf="@+id/imageView4"
-                    app:layout_constraintTop_toTopOf="@+id/imageView4" />
+                    app:layout_constraintBottom_toBottomOf="@+id/iv4"
+                    app:layout_constraintStart_toEndOf="@+id/iv4"
+                    app:layout_constraintTop_toTopOf="@+id/iv4" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
@@ -507,7 +518,9 @@
                 android:layout_marginEnd="15dp"
                 android:textStyle="bold"
                 android:textSize="12sp"
-                android:text="Профессия"
+                android:gravity="center"
+                android:text="Профессия Android-Developer"
+                android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView5"
                 app:layout_constraintTop_toTopOf="@+id/imageView5" />
@@ -528,6 +541,7 @@
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
                 android:text="Котлин - быстрый старт"
+                android:textColor="@color/black"
                 android:textStyle="bold"
                 android:textSize="12sp"
                 android:gravity="center"
@@ -540,6 +554,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="4 месячный онлайн курс"
+                android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView5"
@@ -550,6 +565,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Android профессиональный уровень"
+                android:textColor="@color/black"
                 android:gravity="center"
                 android:textStyle="bold"
                 android:textSize="12sp"
@@ -561,5 +577,6 @@
 
 
     </LinearLayout>
+
 
 </LinearLayout>
